--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.9.2",
     "pg": "^8.11.1",
     "pg-pool": "^3.6.1",
     "ts-node-dev": "^2.0.0",
