--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "author": "Rheingantz",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.30.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.1",
     "pg-pool": "^3.6.1",
     "ts-node-dev": "^2.0.0",
